--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "todolist",
-  "version": "0.1.0",
-  "private": true,
+  "version": "1.0.0",
+  "private": false,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -34,5 +34,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "app to do list basic",
+  "main": "index.js",
+  "repository": "https://github.com/VNKaiSer/todolist-react.git",
+  "author": "kaiser <tandatvok16@gmail.com>",
+  "license": "MIT"
 }
